src/test/ui/type-alias-impl-trait/issue-89686.stderr
error[E0277]: the trait bound `T: Trait` is not satisfied
  --> $DIR/issue-89686.rs:7:17
   |
LL | type G<'a, T> = impl Future<Output = ()>;
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `T`
   |
help: consider restricting type parameter `T`
   |
LL | type G<'a, T: Trait> = impl Future<Output = ()>;
   |             +++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
